--- a/index.htm
+++ b/index.htm
@@ -240,7 +240,7 @@
                         iste inventore magni quae atque doloremque consectetur aperiam reprehenderit non ratione qui rem
                         quod explicabo cupiditate repellat.</p>
                 </div>
-                <img style="order: -1;" src="https://picsum.photos/400/400?random=1">
+                <img style="order: -1;" src="./Imgs/mini pizza presunto.jfif">
             </div>
             <div class="MainContent">
                 <div class="MainText">
@@ -249,7 +249,7 @@
                         iste inventore magni quae atque doloremque consectetur aperiam reprehenderit non ratione qui rem
                         quod explicabo cupiditate repellat.</p>
                 </div>
-                <img style="order: -1;" src="https://picsum.photos/400/400?random=1">
+                <img style="order: -1;" src="./Imgs/mini pizza calabresa.jfif">
             </div>
         </section>
         <!-- Fim da mini pizza -->
