--- a/index.htm
+++ b/index.htm
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Saborear</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="scripts.js"></script>
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles.css">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
+    <script src="scripts.js"></script>
 </head>
 
 <body>
@@ -19,27 +20,33 @@
 
     <div class="mainDiv">
         <!-- Parte do Carrossel -->
-        <section id="carouselExampleIndicators" class="carouselslide">
+        <div id="carouselExampleIndicators" class="carousel slide">
             <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
-                    aria-current="true" aria-label="Slide 1"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-                    aria-label="Slide 2"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-                    aria-label="Slide 3"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img style="border-radius: 30px;" src="./Imgs/croquete.jfif" class="d-block mx-auto">
+                    <img src="./Imgs/croquete.jfif" class="d-block mx-auto" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img style="border-radius: 30px;" src="./Imgs/bolo amendoim.jfif" class="d-block mx-auto">
+                    <img src="./Imgs/bolo aniversario.jfif" class="d-block mx-auto" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img style="border-radius: 30px;" src="./Imgs/bolo salgado.jfif" class="d-block mx-auto">
+                    <img src="./Imgs/bolo amendoim.jfif" class="d-block mx-auto" alt="...">
                 </div>
             </div>
-        </section>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+        
         <!-- Fim do Carrossel -->
 
         <!-- Parte do Menu -->
@@ -264,7 +271,7 @@
                         iste inventore magni quae atque doloremque consectetur aperiam reprehenderit non ratione qui rem
                         quod explicabo cupiditate repellat.</p>
                 </div>
-                <img style="order: -1;" src="./Imgs/croquete grande.jfif">
+                <img style="order: -1;" src="./Imgs/quiche grande.jfif">
             </div>
             <div class="MainContent">
                 <div class="MainText">
@@ -309,7 +316,7 @@
                         iste inventore magni quae atque doloremque consectetur aperiam reprehenderit non ratione qui rem
                         quod explicabo cupiditate repellat.</p>
                 </div>
-                <img style="order: -1;" src="https://picsum.photos/400/400?random=1">
+                <img style="order: -1;" src="./Imgs/empada bacalhau.jfif">
             </div>
             <div class="MainContent">
                 <div class="MainText">
@@ -351,7 +358,7 @@
                         iste inventore magni quae atque doloremque consectetur aperiam reprehenderit non ratione qui rem
                         quod explicabo cupiditate repellat.</p>
                 </div>
-                <img style="order: -1;" src="https://picsum.photos/400/400?random=1">
+                <img style="order: -1;" src="./Imgs/bandeja croquete grande.jfif">
             </div>
             <div class="MainContent">
                 <div class="MainText">
@@ -369,7 +376,7 @@
                         iste inventore magni quae atque doloremque consectetur aperiam reprehenderit non ratione qui rem
                         quod explicabo cupiditate repellat.</p>
                 </div>
-                <img style="order: -1;" src="https://picsum.photos/400/400?random=1">
+                <img style="order: -1;" src="./Imgs/bandeja empada queijo.jfif">
             </div>
         </section>
         <!-- Fim do salgado com bandeja -->
@@ -383,14 +390,6 @@
             <p>&copy; 2024 Saborear. Produtos feitos artesanalmente e com carinho.</p>
         </footer>
     </div>
-
-    <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-        crossorigin="anonymous"></script>
 </body>
 
 </html>
