--- a/index.htm
+++ b/index.htm
@@ -349,7 +349,7 @@
                         iste inventore magni quae atque doloremque consectetur aperiam reprehenderit non ratione qui rem
                         quod explicabo cupiditate repellat.</p>
                 </div>
-                <img style="order: -1;" src="https://picsum.photos/400/400?random=1">
+                <img style="order: -1;" src="./Imgs/bandeja croquete pequeno.jfif">
             </div>
             <div class="MainContent">
                 <div class="MainText">
