--- a/index.htm
+++ b/index.htm
@@ -57,7 +57,7 @@
                     <h2>Quem somos?</h2>
                     <p> A nossa história é baseada em afetos reais transmitidos de geração
                         em geração. O amor não se mede em excessos, mas sim, em gestos singelos
-                        e genuinos. Sabemos que, o que realmente importa são os momentos compartilhados.
+                        e genuínos. Sabemos que, o que realmente importa são os momentos compartilhados.
                     </p>
                 </div>
             </div>
@@ -103,7 +103,7 @@
                 <div class="MainText">
                     <h2>Amendoim com paçoca</h2>
                     <p class="pMain">É conhecido pelo seu rico sabor, pois a combinação de amendoim, chocolate e paçoca remete
-                        a memória afetiva. Sua textura densa e úmida proporciona um paladar inesquecível.</p>
+                        à memória afetiva. Sua textura densa e úmida proporciona um paladar inesquecível.</p>
                     <div class="price">Valor: R$ 30,00 a unidade</div>
                 </div>
                 <img class="imgMain" src="./Imgs/bolo amendoim.jfif">
@@ -123,7 +123,7 @@
                 <div class="MainText">
                     <h2>Cenoura com chocolate</h2>
                     <p class="pMain">Leve e úmido. Uma receita deliciosa para harmonizar um bolo de cenoura,
-                        notas de chocolates ao leite com o aroma de café. Delicioso-né?
+                        notas de chocolates ao leite com o aroma de café. Delicioso né?
                     </p>
                     <div class="price">Valor: R$ 25,00 a unidade</div>
                 </div>
@@ -134,7 +134,7 @@
                     <h2>Fubá com goiabada</h2>
                     <p class="pMain">É uma das combinações mais brasileira que existe. É uma escolha deliciosa
                         e única para acompanhar o seu café. Uma textura macia e 
-                        levemente adoçicada.
+                        levemente adocicada.
                     </p>
                     <div class="price">Valor: R$ 20,00 a unidade</div>
                 </div>
@@ -144,7 +144,7 @@
                 <div class="MainText">
                     <h2>Laranja</h2>
                     <p class="pMain">Um convite para um cafezinho, é um convite aconchegante. O bolo de laranja
-                        quando esta assando perfuma a casa toda com aroma de felicidade.
+                        quando está assando perfuma a casa toda com aroma de felicidade.
                     </p>
                     <div class="price">Valor: R$ 23,00 a unidade</div>
                 </div>
@@ -176,7 +176,7 @@
                     <h2>Salgado com calabresa</h2>
                     <p class="pMain">Quer fazer um lanche especial? O bolo salgado com calabresa é surpreendente
                         e irresistível. Textura crocante com explosão de sabores.</p>
-                    <div class="price">Valor: R$ 30,00</div>
+                    <div class="price">Valor: R$ 30,00 a unidade</div>
                 </div>
                 <img class="imgMain" src="./Imgs/bolo salgado.jfif">
             </div>
@@ -190,7 +190,7 @@
                 <div class="MainText">
                     <h2>Croquetes</h2>
                     <p class="pMain">Imagine um croquete cuja a receita é compartilhada
-                        de geração em geração. A combinação dos ingredientes cria uma sintonia
+                        de geração a geração. A combinação dos ingredientes cria uma sintonia
                         perfeita entre o sabor e a suave picância. Irresistível e com sabor inigualável.
                     </p>
                     <div class="price">Valor: R$ 6,00 a unidade</div>
@@ -200,8 +200,8 @@
             <div class="MainContent">
                 <div class="MainText">
                     <h2>Queijos canastras</h2>
-                    <p class="pMain">O clima, a altituda, os pastos nativos conferem um sabor
-                        único: forte, denso e incorporado. O queijo canastra é tipo de queijo brasileiro
+                    <p class="pMain">O clima, a altitude, os pastos nativos conferem um sabor
+                        único: forte, denso e incorporado. O queijo canastra é um queijo brasileiro
                         de origem e produção mineira. Quem experimenta não esquece jamais.
                     </p>
                     <div class="price">Valor: R$ 59,00 a unidade</div>
@@ -213,7 +213,7 @@
                     <h2>Feijoada</h2>
                     <p class="pMain">Uma feijoada feita no fogão à lenha é aquele prato perfeito para
                         ser degustado com arroz, couve e laranja. É uma iguaria que deixa todos
-                        com àgua na boca.
+                        com água na boca.
                     </p>
                     <div class="price">1Kg | Valor: R$ 29,00</div>
                 </div>
@@ -245,7 +245,7 @@
                 <div class="MainText">
                     <h2>Canjica</h2>
                     <p class="pMain">Uma sobremesa tradicional que combina a cremosidade da canjica
-                        com o sabor e a crocancia do amendoim. É uma opção perfeita para os amantes 
+                        com o sabor e a crocância do amendoim. É uma opção perfeita para os amantes 
                         de doce.
                     </p>
                     <div class="price">500 gramas | Valor: R$ 15,00</div>
@@ -255,8 +255,8 @@
             <div class="MainContent">
                 <div class="MainText">
                     <h2>Caldo de mandioca</h2>
-                    <p class="pMain">Nada mais saboroso do que um caldo de madioca. Um prato que é 
-                        originário do nordeste do Brasil e que nos mineiros amamos.
+                    <p class="pMain">Nada mais saboroso do que um caldo de madioca. Um prato 
+                        originário do nordeste do Brasil e que nós mineiros amamos.
                     </p>
                     <div class="price">500 gramas | Valor: R$ 18,00</div>
                 </div>
@@ -303,7 +303,7 @@
             <div class="MainContent">
                 <div class="MainText">
                     <h2>Mussarela com calabresa</h2>
-                    <p class="pMain">O sabor marcante da calabresa é o destaque dessa delicia. É uma ótima
+                    <p class="pMain">O sabor marcante da calabresa é o destaque dessa delícia. É uma ótima
                         opção para um jantar despojado ou um lanche elaborado.
                     </p>
                     <div class="price">Valor: R$ 5,00 a unidade</div>
@@ -320,8 +320,8 @@
                 <div class="MainText">
                     <h2>Quiche grande</h2>
                     <p class="pMain">A palavra Quiche "vem do alemão Küchen" (torta). Uma torta aberta
-                        que combina perfeitamente com café, suco, refrigerante. O vinho branco é uma 
-                        ótima escolha para harmonizar com a levedura e suavidade da quiche.
+                        que combina perfeitamente com café, suco, refrigerante. A levedura do vinho branco é uma 
+                        ótima escolha para harmonizar com a suavidade da quiche.
                     </p>
                     <div class="price">Valor: R$ 7,00 a unidade</div>
                 </div>
@@ -341,9 +341,9 @@
             <div class="MainContent">
                 <div class="MainText">
                     <h2>Tortinha de quiche</h2>
-                    <p class="pMain">Ideal para um lanche rápido. A sculência do frango e a cobertura
-                        com creme especial é sem dúvida uma combinação perfeita proporcionando um 
-                        sabor incomparável.
+                    <p class="pMain">Ideal para um lanche rápido. A suculência do frango e a cobertura
+                        com creme especial é sem dúvida uma combinação perfeita que proporciona um 
+                        incomparável sabor.
                     </p>
                     <div class="price">Valor: R$ 9,00 a unidade</div>
                 </div>
@@ -354,7 +354,7 @@
                     <h2>Empada de queijo</h2>
                     <p class="pMain">Sucesso em  qualquer festa, a popular empadinha é uma opção certeira
                         de salgado para servir aos convidados. A escolha assertiva do quejo garante um
-                        recheio massio e quase cremoso.
+                        recheio macio e quase cremoso.
                     </p>
                     <div class="price">Valor: R$ 3,00 a unidade</div>
                 </div>
@@ -391,7 +391,7 @@
                 <div class="MainText">
                     <h2>Bandeja de canapé</h2>
                     <p class="pMain">Servido como aperitivo ou para um lanche, o canapé é uma 
-                        combinação de iguaria tendo origem na Grécia e que, nos brasileiros amamos.
+                        combinação de iguaria tendo origem na Grécia e que, nós brasileiros amamos.
                         
                     </p>
                     <div class="price">Valor: R$ 22,00 com 15 unidade</div>
@@ -402,7 +402,7 @@
                 <div class="MainText">
                     <h2>Bandeja de croquete pequeno</h2>
                     <p class="pMain">Imagine um croquete cuja a receita é compartilhada
-                        de geração em geração. A combinação dos ingredientes cria uma sintonia
+                        de geração a geração. A combinação dos ingredientes cria uma sintonia
                         perfeita entre o sabor e a suave picância. Irresistível e com sabor inigualável. 
                         Sucesso como aperitivo ou em qualquer festa para servir os convidados.
                     </p>
@@ -414,7 +414,7 @@
                 <div class="MainText">
                     <h2>Bandeja de croquete grande</h2>
                     <p class="pMain">Imagine um croquete cuja a receita é compartilhada
-                        de geração em geração. A combinação dos ingredientes cria uma sintonia
+                        de geração a geração. A combinação dos ingredientes cria uma sintonia
                         perfeita entre o sabor e a suave picância. Irresistível e com sabor inigualável.
                         Sucesso como aperitivo ou em qualquer festa para servir os convidados.
                     </p>
