--- a/index.htm
+++ b/index.htm
@@ -353,7 +353,7 @@
                 <div class="MainText">
                     <h2>Empada de queijo</h2>
                     <p class="pMain">Sucesso em  qualquer festa, a popular empadinha é uma opção certeira
-                        de salgado para servir aos convidados. A escolha assertiva do quejo garante um
+                        de salgado para servir aos convidados. A escolha assertiva do queijo garante um
                         recheio macio e quase cremoso.
                     </p>
                     <div class="price">Valor: R$ 3,00 a unidade</div>
@@ -436,7 +436,7 @@
                 <div class="MainText">
                     <h2>Bandeja de empada de queijo</h2>
                     <p class="pMain">Sucesso em  qualquer festa, a popular empadinha é uma opção certeira
-                        de salgado para servir aos convidados. A escolha assertiva do quejo garante um
+                        de salgado para servir aos convidados. A escolha assertiva do queijo garante um
                         recheio massio e quase cremoso.</p>
                     <div class="price">Valor: R$ 24,00 com 8 unidade</div>
                 </div>
