Alteração no footer da página

--- a/index.htm
+++ b/index.htm
@@ -473,8 +473,14 @@
     <div class="footer-text">
         <p>&copy; 2024 Saborear. Produtos feitos artesanalmente com amor.</p>
         <p>Telefone: (37) 99111-1223</p>
-        <a class="aContato" href="https://api.whatsapp.com/send/?phone=5537991111223&text&type=phone_number&app_absent=0" target="_blank">Whatsapp</a>
-        <a class="aContato" href="https://www.instagram.com/saborear_quituteartesanal?igsh=MWVjeGw2ODVkYmJ4Yw==" target="_blank">Instagram</a>
+        <div class="footer-contact">
+            <p class="footer-contact-p">Clique aqui ➔ </p>
+            <a class="aContato" href="https://api.whatsapp.com/send/?phone=5537991111223&text&type=phone_number&app_absent=0" target="_blank">Whatsapp</a>
+        </div>
+        <div class="footer-contact">
+            <p class="footer-contact-p">Clique aqui ➔ </p>
+            <a class="aContato" href="https://www.instagram.com/saborear_quituteartesanal?igsh=MWVjeGw2ODVkYmJ4Yw==" target="_blank">Instagram</a>
+        </div>
     </div>
 </footer>
 </html>
