--- a/index.htm
+++ b/index.htm
@@ -101,6 +101,18 @@
             <h1 id="bolos">Bolos</h1>
             <div class="MainContent">
                 <div class="MainText">
+                    <h2>Bolo de aniversário</h2>
+                    <p class="pMain">Uma forma singela de expressar amor. 
+                        Opções de recheios: mousse de chocolate, mousse de morango, 
+                        mousse de leite ninho, trufado ao leite, trufado branco, trufado de nutella,
+                        ninho com morango, sonho de valsa e laka/óreo. O valor pode variar de acordo
+                        com o recheio.</p>
+                    <div class="price">Valor: R$ 120,00 a unidade</div>
+                </div>
+                <img class="imgMain" src="./Imgs/bolo aniversario.jfif">
+            </div>
+            <div class="MainContent">
+                <div class="MainText">
                     <h2>Amendoim com paçoca</h2>
                     <p class="pMain">É conhecido pelo seu rico sabor, pois a combinação de amendoim, chocolate e paçoca remete
                         à memória afetiva. Sua textura densa e úmida proporciona um paladar inesquecível.</p>
@@ -117,7 +129,7 @@
                     </p>
                     <div class="price">Valor: R$ 30,00 a unidade</div>
                 </div>
-                <img class="imgMain" src="./Imgs/bolo aveia com banana.jpg">
+                <img class="imgMain" src="./Imgs/bolo aveia com banana.jfif">
             </div>
             <div class="MainContent">
                 <div class="MainText">
@@ -131,6 +143,28 @@
             </div>
             <div class="MainContent">
                 <div class="MainText">
+                    <h2>Chocolate vulcão</h2>
+                    <p class="pMain">Um clássico que derrete na boca. Uma solução perfeita para 
+                        satisfazer aquele desejo por um doce. Esse bolo vulcão é inesquecível devido ao
+                        sabor único do chocolate.
+                    </p>
+                    <div class="price">Valor: R$ 20,00 a unidade</div>
+                </div>
+                <img class="imgMain" src="./Imgs/bolo chocolate.jfif">
+            </div>
+            <div class="MainContent">
+                <div class="MainText">
+                    <h2>Chocolate piscina</h2>
+                    <p class="pMain">É um mimo para presentear. Sua singelesa associada ao
+                        sabor de chocolate, leva amor a quem recebe. Um momento para criar
+                        memória afetiva.
+                    </p>
+                    <div class="price">Valor: R$ 15,00 a unidade</div>
+                </div>
+                <img class="imgMain" src="./Imgs/bolo chocolate piscina.jfif">
+            </div>
+            <div class="MainContent">
+                <div class="MainText">
                     <h2>Fubá com goiabada</h2>
                     <p class="pMain">É uma das combinações mais brasileira que existe. É uma escolha deliciosa
                         e única para acompanhar o seu café. Uma textura macia e 
@@ -139,6 +173,27 @@
                     <div class="price">Valor: R$ 20,00 a unidade</div>
                 </div>
                 <img class="imgMain" src="./Imgs/bolo de fuba com goiaba.jpg">
+            </div>
+            <div class="MainContent">
+                <div class="MainText">
+                    <h2>Fubá com Queijo</h2>
+                    <p class="pMain">Um bolo afetivo que traz carinho e felicidade em cada pedaço.
+                        Presente nos lares das famílias brasileiras.
+                    </p>
+                    <div class="price">Valor: R$ 20,00 a unidade</div>
+                </div>
+                <img class="imgMain" src="./Imgs/Fuba com queijo.jfif">
+            </div>
+            <div class="MainContent">
+                <div class="MainText">
+                    <h2>Indiano piscina</h2>
+                    <p class="pMain">É perfeito para receber as pessoas em sua casa. Para 
+                        um café. Leve, cremoso e macio. Se destaca por ser um bolo 
+                        aromático.
+                    </p>
+                    <div class="price">Valor: R$ 33,00 a unidade</div>
+                </div>
+                <img class="imgMain" src="./Imgs/bolo indiano.jpg">
             </div>
             <div class="MainContent">
                 <div class="MainText">
