Adicionando novos itens no cardápio

--- a/index.htm
+++ b/index.htm
@@ -82,6 +82,9 @@
                             <a href="#mini pizzas">Mini pizzas</a>
                         </li>
                         <li>
+                            <a href="#tortas">Tortas</a>
+                        </li>
+                        <li>
                             <a href="#salgado unidade">Salgados unidade</a>
                         </li>
                         <li>
@@ -107,7 +110,7 @@
                         mousse de leite ninho, trufado ao leite, trufado branco, trufado de nutella,
                         ninho com morango, sonho de valsa e laka/óreo. O valor pode variar de acordo
                         com o recheio.</p>
-                    <div class="price">Valor: R$ 120,00 a unidade</div>
+                    <div class="price">Valor: R$ 130,00 a unidade</div>
                 </div>
                 <img class="imgMain" src="./Imgs/bolo aniversario.jfif">
             </div>
@@ -116,7 +119,7 @@
                     <h2>Amendoim com paçoca</h2>
                     <p class="pMain">É conhecido pelo seu rico sabor, pois a combinação de amendoim, chocolate e paçoca remete
                         à memória afetiva. Sua textura densa e úmida proporciona um paladar inesquecível.</p>
-                    <div class="price">Valor: R$ 30,00 a unidade</div>
+                    <div class="price">Valor: R$ 35,00 a unidade</div>
                 </div>
                 <img class="imgMain" src="./Imgs/bolo amendoim.jfif">
             </div>
@@ -127,7 +130,7 @@
                         bananas adiciona uma dimensão deliciosa ao sabor do bolo, tornando-o uma opção 
                         versátil para diversos momentos do dia.
                     </p>
-                    <div class="price">Valor: R$ 30,00 a unidade</div>
+                    <div class="price">Valor: R$ 33,00 a unidade</div>
                 </div>
                 <img class="imgMain" src="./Imgs/bolo aveia com banana.jfif">
             </div>
@@ -137,7 +140,7 @@
                     <p class="pMain">Leve e úmido. Uma receita deliciosa para harmonizar um bolo de cenoura,
                         notas de chocolates ao leite com o aroma de café. Delicioso né?
                     </p>
-                    <div class="price">Valor: R$ 25,00 a unidade</div>
+                    <div class="price">Valor: R$ 29,00 a unidade</div>
                 </div>
                 <img class="imgMain" src="./Imgs/Bolo de cenoura com chocolate.jfif">
             </div>
@@ -148,7 +151,7 @@
                         satisfazer aquele desejo por um doce. Esse bolo vulcão é inesquecível devido ao
                         sabor único do chocolate.
                     </p>
-                    <div class="price">Valor: R$ 20,00 a unidade</div>
+                    <div class="price">Valor: R$ 25,00 a unidade</div>
                 </div>
                 <img class="imgMain" src="./Imgs/bolo chocolate.jfif">
             </div>
@@ -159,7 +162,7 @@
                         sabor de chocolate, leva amor a quem recebe. Um momento para criar
                         memória afetiva.
                     </p>
-                    <div class="price">Valor: R$ 15,00 a unidade</div>
+                    <div class="price">Valor: R$ 20,00 a unidade</div>
                 </div>
                 <img class="imgMain" src="./Imgs/bolo chocolate piscina.jfif">
             </div>
@@ -170,7 +173,7 @@
                         e única para acompanhar o seu café. Uma textura macia e 
                         levemente adocicada.
                     </p>
-                    <div class="price">Valor: R$ 20,00 a unidade</div>
+                    <div class="price">Valor: R$ 25,00 a unidade</div>
                 </div>
                 <img class="imgMain" src="./Imgs/bolo de fuba com goiaba.jpg">
             </div>
@@ -180,7 +183,7 @@
                     <p class="pMain">Um bolo afetivo que traz carinho e felicidade em cada pedaço.
                         Presente nos lares das famílias brasileiras.
                     </p>
-                    <div class="price">Valor: R$ 20,00 a unidade</div>
+                    <div class="price">Valor: R$ 25,00 a unidade</div>
                 </div>
                 <img class="imgMain" src="./Imgs/Fuba com queijo.jfif">
             </div>
@@ -191,7 +194,7 @@
                         um café. Leve, cremoso e macio. Se destaca por ser um bolo 
                         aromático.
                     </p>
-                    <div class="price">Valor: R$ 33,00 a unidade</div>
+                    <div class="price">Valor: R$ 35,00 a unidade</div>
                 </div>
                 <img class="imgMain" src="./Imgs/bolo indiano.jpg">
             </div>
@@ -201,7 +204,7 @@
                     <p class="pMain">Um convite para um cafezinho, é um convite aconchegante. O bolo de laranja
                         quando está assando perfuma a casa toda com aroma de felicidade.
                     </p>
-                    <div class="price">Valor: R$ 23,00 a unidade</div>
+                    <div class="price">Valor: R$ 27,00 a unidade</div>
                 </div>
                 <img class="imgMain" src="./Imgs/bolo laranja.jfif">
             </div>
@@ -212,7 +215,7 @@
                         que a gente nunca esquece. Se acompanhado de sorvete de limão, trasforma-se
                         em uma deliciosa sobremesa.
                     </p>
-                    <div class="price">Valor: R$ 25,00 a unidade</div>
+                    <div class="price">Valor: R$ 29,00 a unidade</div>
                 </div>
                 <img class="imgMain" src="./Imgs/bolo limao.jfif">
             </div>
@@ -222,7 +225,7 @@
                     <p class="pMain">O curau de milho verde é uma das receitas mais tradicionais. O toque
                         de canela deixa-o ainda mais saboroso. Uma combinação perfeita!
                     </p>
-                    <div class="price">Valor: R$ 30,00 a unidade</div>
+                    <div class="price">Valor: R$ 35,00 a unidade</div>
                 </div>
                 <img class="imgMain" src="./Imgs/bolo curau.jfif">
             </div>
@@ -231,7 +234,7 @@
                     <h2>Salgado com calabresa</h2>
                     <p class="pMain">Quer fazer um lanche especial? O bolo salgado com calabresa é surpreendente
                         e irresistível. Textura crocante com explosão de sabores.</p>
-                    <div class="price">Valor: R$ 30,00 a unidade</div>
+                    <div class="price">Valor: R$ 35,00 a unidade</div>
                 </div>
                 <img class="imgMain" src="./Imgs/bolo salgado.jfif">
             </div>
@@ -252,6 +255,7 @@
                 </div>
                 <img class="imgMain" src="./Imgs/croquete.jfif">
             </div>
+            <!-- 
             <div class="MainContent">
                 <div class="MainText">
                     <h2>Queijos canastras</h2>
@@ -263,6 +267,7 @@
                 </div>
                 <img class="imgMain" src="./Imgs//queijo canastra.jfif">
             </div>
+            -->
             <div class="MainContent">
                 <div class="MainText">
                     <h2>Feijoada</h2>
@@ -270,10 +275,11 @@
                         ser degustado com arroz, couve e laranja. É uma iguaria que deixa todos
                         com água na boca.
                     </p>
-                    <div class="price">1Kg | Valor: R$ 29,00</div>
+                    <div class="price">1Kg | Valor: R$ 35,00</div>
                 </div>
                 <img class="imgMain" src="./Imgs/feijoada.jfif">
             </div>
+            <!--
             <div class="MainContent">
                 <div class="MainText">
                     <h2>Caçarola italiana</h2>
@@ -285,17 +291,30 @@
                 </div>
                 <img class="imgMain" src="./Imgs/cacarola italiana.png">
             </div>
+            -->
             <div class="MainContent">
                 <div class="MainText">
-                    <h2>Lasanha</h2>
+                    <h2>Lasanha de Frango</h2>
                     <p class="pMain">A combinação perfeita de frango desfiado e molho especial, tem 
                         como resultado um sabor inconfundível. Essa lasanha não passa por desapercebida
                         aos olhos de quem se propõe a degustar.
                     </p>
-                    <div class="price">Valor: R$ 30,00 a unidade</div>
+                    <div class="price">Valor: R$ 35,00 a unidade</div>
                 </div>
                 <img class="imgMain" src="./Imgs/lasanha.jpeg">
             </div>
+            <div class="MainContent">
+                <div class="MainText">
+                    <h2>Lasanha de Palmito com Alho Poró</h2>
+                    <p class="pMain">A combinação perfeita de palmito com alho poró, tem 
+                        como resultado um sabor inconfundível. Essa lasanha não passa por desapercebida
+                        aos olhos de quem se propõe a degustar.
+                    </p>
+                    <div class="price">Valor: R$ 40,00 a unidade</div>
+                </div>
+                <img class="imgMain" src="./Imgs/Lasanha-Palmito.png">
+            </div>
+            <!--
             <div class="MainContent">
                 <div class="MainText">
                     <h2>Canjica</h2>
@@ -307,6 +326,7 @@
                 </div>
                 <img class="imgMain" src="./Imgs/canjica.jfif">
             </div>
+            
             <div class="MainContent">
                 <div class="MainText">
                     <h2>Caldo de mandioca</h2>
@@ -317,6 +337,7 @@
                 </div>
                 <img class="imgMain" src="./Imgs/vaca tolada.jfif">
             </div>
+
             <div class="MainContent">
                 <div class="MainText">
                     <h2>Consumê</h2>
@@ -329,6 +350,7 @@
                 </div>
                 <img class="imgMain" src="./Imgs/consume.jfif">
             </div>
+            -->
         </section>
         <!-- Fim do Variedades -->
 
@@ -341,7 +363,7 @@
                     <p class="pMain">Uma massa que derrete na boca com a combinação perfeita do frango 
                         e a mussarela que vão encantar o seu paladar.
                     </p>
-                    <div class="price">Valor: R$ 5,00 a unidade</div>
+                    <div class="price">Valor: R$ 6,00 a unidade</div>
                 </div>
                 <img class="imgMain" src="./Imgs/mini pizza.jfif">
             </div>
@@ -351,7 +373,7 @@
                     <p class="pMain">Uma massa saborosa, que derrete na boca, com aquele sabor 
                         inigualável do presunto, mussarela, tomate e cebola. Uma combinação perfeita. 
                     </p>
-                    <div class="price">Valor: R$ 5,00 a unidade</div>
+                    <div class="price">Valor: R$ 6,00 a unidade</div>
                 </div>
                 <img class="imgMain" src="./Imgs/mini pizza presunto.jfif">
             </div>
@@ -361,12 +383,82 @@
                     <p class="pMain">O sabor marcante da calabresa é o destaque dessa delícia. É uma ótima
                         opção para um jantar despojado ou um lanche elaborado.
                     </p>
-                    <div class="price">Valor: R$ 5,00 a unidade</div>
+                    <div class="price">Valor: R$ 6,00 a unidade</div>
                 </div>
                 <img class="imgMain" src="./Imgs/mini pizza calabresa.jfif">
             </div>
         </section>
         <!-- Fim da mini pizza -->
+
+        <!-- Parte das tortas -->
+        <section class="MainSection">
+            <h1 id="tortas">Tortas</h1>
+            <div class="MainContent">
+                <div class="MainText">
+                    <h2>Torta de Bacalhau</h2>
+                    <p class="pMain">Perfeita para qualquer ocasião, a nossa 
+                        torta de bacalhau é uma celebração da culinária 
+                        portuguesa, levando você direto ao coração de Portugal 
+                        em cada mordida. Acompanhe com uma salada verde ou uma 
+                        taça de vinho branco para uma experiência completa.
+                    </p>
+                    <div class="price">Valor: R$ 85,00 a unidade</div>
+                </div>
+                <img class="imgMain" src="./Imgs/torta bacalhau.jpeg">
+            </div>
+            <div class="MainContent">
+                <div class="MainText">
+                    <h2>Torta de Quiche com Frango</h2>
+                    <p class="pMain">A palavra Quiche "vem do alemão Küchen" (torta). Uma torta aberta
+                        que combina perfeitamente com café, suco, refrigerante. A levedura do vinho branco é uma 
+                        ótima escolha para harmonizar com a suavidade da quiche.
+                    </p>
+                    <div class="price">Valor: R$ 95,00 a unidade</div>
+                </div>
+                <img class="imgMain" src="./Imgs/torta quiche com frango.jpg">
+            </div>
+            <div class="MainContent">
+                <div class="MainText">
+                    <h2>Torta de Palmito e Alho Poró</h2>
+                    <p class="pMain">Descubra a nossa Torta de Palmito e Alho-Poró, 
+                        uma combinação delicada e sofisticada que conquista 
+                        paladares exigentes. Feita com palmito macio e alho-poró 
+                        levemente caramelizado, essa torta une a suavidade dos 
+                        ingredientes a um cremoso recheio de creme de leite fresco,
+                        queijo derretido para um sabor único.
+                    </p>
+                    <div class="price">Valor: R$ 119,00 a unidade</div>
+                </div>
+                <img class="imgMain" src="./Imgs/torta alho poro.png">
+            </div>
+            <div class="MainContent">
+                <div class="MainText">
+                    <h2>Torta de Quiche com Peito de Peru, Damasco e Abacaxi</h2>
+                    <p class="pMain">Surpreenda-se com a nossa Quiche de Peito de Peru, 
+                        Damasco e Abacaxi, uma combinação única e irresistível que une o 
+                        sabor suave do peito de peru defumado com a doçura natural do 
+                        damasco e o toque tropical do abacaxi.
+                    </p>
+                    <div class="price">Valor: R$ 119,00 a unidade</div>
+                </div>
+                <img class="imgMain" src="./Imgs/torta-damasco.png">
+            </div>
+            <div class="MainContent">
+                <div class="MainText">
+                    <h2>Torta de Frango com Quejo e Legumes</h2>
+                    <p class="pMain">Delicie-se com a nossa Torta de Frango com Queijo e 
+                        Legumes, uma opção reconfortante e saborosa que combina o melhor 
+                        dos ingredientes em uma receita caseira e irresistível. Ideal para 
+                        um almoço em família, um jantar aconchegante ou até mesmo para 
+                        levar para um piquenique, essa torta é a cara do conforto que só a 
+                        comida caseira proporciona.
+                    </p>
+                    <div class="price">Valor: R$ 89,00 a unidade</div>
+                </div>
+                <img class="imgMain" src="./Imgs/torta de frango legumes.jpg">
+            </div>
+        </section>
+        <!-- Fim das tortas -->
 
         <!-- Parte do salgado unidade -->
         <section class="MainSection">
@@ -489,6 +581,29 @@
             </div>
             <div class="MainContent">
                 <div class="MainText">
+                    <h2>Bandeja de mini quiche</h2>
+                    <p class="pMain">Apresentamos a nossa Bandeja de Mini Quiches, uma 
+                        seleção encantadora de pequenas delícias que conquistam tanto os 
+                        olhos quanto o paladar.Perfeitas para coquetéis, festas ou eventos 
+                        especiais, essas mini quiches são práticas, elegantes e 
+                        irresistíveis.
+                    </p>
+                    <div class="price">Valor: R$ 30,00 com 20 unidade</div>
+                </div>
+                <img class="imgMain" src="./Imgs/mini quiche peito peru damasco.jpg">
+            </div>
+            <div class="MainContent">
+                <div class="MainText">
+                    <h2>Bandeja de mini empada de queijo</h2>
+                    <p class="pMain">Sucesso em  qualquer festa, a popular empadinha é uma opção certeira
+                        de salgado para servir aos convidados. A escolha assertiva do queijo garante um
+                        recheio massio e quase cremoso.</p>
+                    <div class="price">Valor: R$ 24,00 com 20 unidade</div>
+                </div>
+                <img class="imgMain" src="./Imgs/mini empada de queijo.jpg">
+            </div>
+            <div class="MainContent">
+                <div class="MainText">
                     <h2>Bandeja de empada de queijo</h2>
                     <p class="pMain">Sucesso em  qualquer festa, a popular empadinha é uma opção certeira
                         de salgado para servir aos convidados. A escolha assertiva do queijo garante um
@@ -504,7 +619,7 @@
                         deliciosa que desmancha na boca é uma empada surreal. Experimente!</p>
                     <div class="price">Valor: R$ 28,00 com 8 unidade</div>
                 </div>
-                <img class="imgMain" src="./Imgs/empada bacalhau.jfif">
+                <img class="imgMain" src="./Imgs/empada bacalhau.jpg">
             </div>
             <div class="MainContent">
                 <div class="MainText">
@@ -514,7 +629,7 @@
                         ao saborear.</p>
                     <div class="price">Valor: R$ 28,00 com 8 unidade</div>
                 </div>
-                <img class="imgMain" src="./Imgs/bandeja palmito com alho poro.jfif">
+                <img class="imgMain" src="./Imgs/bandeja palmito com alho poro.jpg">
             </div>
         </section>
         <!-- Fim do salgado com bandeja -->
