Correção de algumas fotos

--- a/index.htm
+++ b/index.htm
@@ -121,7 +121,7 @@
                         à memória afetiva. Sua textura densa e úmida proporciona um paladar inesquecível.</p>
                     <div class="price">Valor: R$ 35,00 a unidade</div>
                 </div>
-                <img class="imgMain" src="./Imgs/bolo amendoim.jfif">
+                <img class="imgMain" src="./Imgs/bolo amendoim.jpg">
             </div>
             <div class="MainContent">
                 <div class="MainText">
@@ -175,7 +175,7 @@
                     </p>
                     <div class="price">Valor: R$ 25,00 a unidade</div>
                 </div>
-                <img class="imgMain" src="./Imgs/bolo de fuba com goiaba.jpg">
+                <img class="imgMain" src="./Imgs/bolo fuba com goiabada.jpg">
             </div>
             <div class="MainContent">
                 <div class="MainText">
@@ -185,7 +185,7 @@
                     </p>
                     <div class="price">Valor: R$ 25,00 a unidade</div>
                 </div>
-                <img class="imgMain" src="./Imgs/Fuba com queijo.jfif">
+                <img class="imgMain" src="./Imgs/Fuba com queijo.jpg">
             </div>
             <div class="MainContent">
                 <div class="MainText">
@@ -505,7 +505,7 @@
                     </p>
                     <div class="price">Valor: R$ 3,00 a unidade</div>
                 </div>
-                <img class="imgMain" src="./Imgs/empada queijo.jfif">
+                <img class="imgMain" src="./Imgs/empada de queijo.jpg">
             </div>
             <div class="MainContent">
                 <div class="MainText">
